[gd_scene load_steps=8 format=2]

[ext_resource path="res://music/bgm_boss.wav" type="AudioStream" id=1]
[ext_resource path="res://music/bgm.wav" type="AudioStream" id=2]
[ext_resource path="res://music/startover.wav" type="AudioStream" id=3]
[ext_resource path="res://music/success.wav" type="AudioStream" id=4]
[ext_resource path="res://music/bullet_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://music/musicController.gd" type="Script" id=6]
[ext_resource path="res://music/get_supply.wav" type="AudioStream" id=7]

[node name="MusicController" type="Node2D"]
script = ExtResource( 6 )

[node name="BgmMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BossBgmMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="SuccessMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="StartOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BulletHitMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GetSupplyMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="finished" from="BgmMusic" to="." method="_on_BgmMusic_finished"]
[connection signal="finished" from="BossBgmMusic" to="." method="_on_BossBgmMusic_finished"]
[connection signal="finished" from="StartOver" to="." method="_on_StartOver_finished"]
